<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018-2020 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/buy_pro_features">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:title="@string/sku_all"
                    android:id="@+id/menu_skus_all"/>

                <item
                    android:title="@string/disable_ads"
                    android:id="@+id/menu_skus_ads"/>

            </group>
        </menu>

    </item>

</menu>
