<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018-2020 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:minHeight="100dp"
    android:padding="8dp">

    <TextView
        android:textSize="18sp"
        android:text="@string/brush_size_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:padding="8dp"
        android:id="@+id/dialog_draw_options_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <TextView
        android:textSize="18sp"
        android:text="@string/color_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_marginTop="6dp"
        android:prompt="@string/color"
        android:id="@+id/dialog_draw_options_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="125dp"/>

    <Switch
        android:id="@+id/dialog_draw_options_switch"
        android:text="@string/eraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
