<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018-2020 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="24sp"
        android:hint="@string/title"
        android:lines="1"
        android:id="@+id/dialog_audios_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        tools:ignore="Autofill"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/record"
            android:id="@+id/dialog_audios_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"/>

        <Button
            android:text="@string/play"
            android:id="@+id/dialog_audios_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"/>

        <Button
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/delete"
            android:id="@+id/dialog_audios_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>
