<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018-2020 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    android:layout_width="300dp"
    android:layout_height="125dp">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:id="@+id/dialog_password_title"
        android:textSize="18sp"
        android:text="@string/type_8_length_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dialog_password_field"
        android:maxLength="8"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/dialog_password_bt"
        android:visibility="gone"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
