<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018-2020 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="fragment_edit"
    tools:context=".mvp.view.fragment.EditFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/fragment_edit_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_weight="10"
                        android:textSize="24sp"
                        android:hint="@string/title"
                        android:id="@+id/fragment_edit_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        tools:ignore="Autofill"/>

                    <Switch
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:text="@string/input"
                        android:textSize="18sp"
                        android:id="@+id/fragment_edit_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_weight="5"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_height="match_parent"
                android:inputType="text|textAutoCorrect|textMultiLine|textCapSentences|textAutoComplete"
                android:hint="@string/text"
                android:id="@+id/textField"
                tools:ignore="Autofill"/>

            <com.google.android.gms.ads.AdView
                android:layout_weight="0"
                android:layout_gravity="bottom|center_horizontal"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fragment_edit_ad_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/adUnitId"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
